Fixing errors